Ver.1.3.0
---------
* dataengine:
    + add new sources: intIp6, extIp6, netctlAutoStatus
    * rewrite to use [tasks](https://github.com/mhogomchungu/tasks) (see #7)
    * change default command to define external IP
    * change interface list definition
    * change internal IP definition
* gui:
    + add 3rd party license information
    + add system tray icon
    * update to library changes
    * rewrite tables to use toolTip
* library:
    + add custom structures netctlWifiInfo and netctlProfileInfo
    + add methods getActiveProfile(), autoGetActiveProfile()
    + add slot switchToProfile()
    * rewrite to use [tasks](https://github.com/mhogomchungu/tasks) (see #7)
    * rename getInterfaceList() to getWirelessInterfaceList()
    - remove functions getProfileDescriptions() and getProfileStatuses()
    - remove SleepThread class
* plasmoid:
    + add 3rd party license information
    * change all running processes to detached (see #7)
    * rewrite text label to use tags

***

Ver.1.2.0
---------
* all:
    + add icons
    + add support of netctl-auto
    * changes in the project architecture
    * refactoring
* dataengine:
    + add debug information (NETCTLGUI_DEBUG=yes)
* gui:
    + add support of macvlan
    + add ability to remove profile
    + add support of hidden wifi network
    + add contextual menu to tables
    + add actions menu
    + add clear() function to profileTab
    + add about window
    + more command line options
    + add workaround for wireless-wep example
    + add shell completions
    + add "Report a bug" action
    - fix possible segfaults with null arrays (#5)
    * more debug information
    * change lineEdit_profile to comboBox
    * refactoring of configuration interface
    * change setting of the interface to profile tab
    * rewrite ErrorWindow class
* library:
    + detach backend from frontend
    + add error checking
    + add doxygen documentation
    * more debug information