@@ -16,13 +16,15 @@ link_directories (${PROJECT_LIBRARY}/src/lib)
 
 if (USE_QT5)
     find_package(Qt5Core REQUIRED)
+    find_package(Qt5DBus REQUIRED)
     find_package(Qt5Widgets REQUIRED)
     find_package(Qt5LinguistTools REQUIRED)
     add_definitions(${Qt5Core_DEFINITIONS})
+    add_definitions(${Qt5DBus_DEFINITIONS})
     add_definitions(${Qt5Widgets_DEFINITIONS})
     add_definitions(${Qt5LinguistTools_DEFINITIONS})
-    include_directories (${Qt5Core_INCLUDE_DIRS} ${Qt5Widgets_INCLUDE_DIRS})
-    set (QT_NEEDED_LIBS ${Qt5Core_LIBRARIES} ${Qt5Widgets_LIBRARIES})
+    include_directories (${Qt5Core_INCLUDE_DIRS} ${Qt5DBus_INCLUDE_DIRS} ${Qt5Widgets_INCLUDE_DIRS})
+    set (QT_NEEDED_LIBS ${Qt5Core_LIBRARIES} ${Qt5DBus_LIBRARIES} ${Qt5Widgets_LIBRARIES})
     qt5_wrap_cpp (MOC_SOURCES ${HEADERS})
     qt5_wrap_ui (UI_HEADERS ${FORMS})
     qt5_add_resources (QRC_SOURCES ${RESOURCES})
@@ -37,9 +39,9 @@ if (USE_QT5)
     add_custom_target (translations COMMAND ${Qt5_LUPDATE_EXECUTABLE} ${HEADERS} ${SOURCES} ${UI_HEADERS} -ts ${TRANSLATIONS})
     add_custom_command (TARGET translations COMMAND ${Qt5_LRELEASE_EXECUTABLE} ${TRANSLATIONS})
 else ()
-    find_package (Qt4 REQUIRED)
+    find_package (Qt4 COMPONENTS QtCore QtDBus QtGui REQUIRED)
     include (${QT_USE_FILE})
-    set (QT_NEEDED_LIBS ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY})
+    set (QT_NEEDED_LIBS ${QT_QTCORE_LIBRARY} ${QT_QTDBUS_LIBRARY} ${QT_QTGUI_LIBRARY})
     qt4_wrap_cpp (MOC_SOURCES ${HEADERS})
     qt4_wrap_ui (UI_HEADERS ${FORMS})
     qt4_add_resources (QRC_SOURCES ${RESOURCES})
