@@ -16,7 +16,7 @@ if (USE_QT5)
     set (QT_NEEDED_LIBS ${Qt5Core_LIBRARIES})
     qt5_wrap_cpp (MOC_SOURCES ${HEADERS})
 else ()
-    find_package (Qt4 REQUIRED)
+    find_package (Qt4 COMPONENTS QtCore REQUIRED)
     include (${QT_USE_FILE})
     set (QT_NEEDED_LIBS ${QT_QTCORE_LIBRARY})
     qt4_wrap_cpp (MOC_SOURCES ${HEADERS})
