@@ -27,4 +27,8 @@
 #define PROJECT_BUILD_PLASMOID "@BUILD_PLASMOID@"
 #define PROJECT_USE_QT5 "@USE_QT5@"
 
+#define DBUS_SERVICE "org.netctlgui.netctlgui"
+#define DBUS_OBJECT_PATH "/"
+#define DBUS_INTERFACE "org.netctlgui.netctlgui"
+
 #endif /* VERSION_H */
