@@ -9,6 +9,7 @@ Ver.1.3.0
 * gui:
     + add 3rd party license information
     + add system tray icon
+    + add dbus interface org.netctlgui.netctlgui
     * update to library changes
     * rewrite tables to use toolTip
 * library:
